# claude-hud

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  error.rs  hotkey.rs  lib.rs  main.rs  poller.rs  store.rs  tray.rs  usage_client.rs
src/components/: Sparkline.tsx  UsageBar.tsx
src/hooks/: useUsage.ts
src/modes/: Full.tsx  Minimal.tsx
